--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://www.example.com"
-title = "johndoe"
+title = "maibennett"
 
 theme = "hugo-coder"
 
@@ -16,11 +16,11 @@ pygmentscodefencesguesssyntax = true
 disqusShortname = "yourdiscussshortname"
 
 [params]
-    author = "John Doe"
-    description = "John Doe's personal website"
-    keywords = "blog,developer,personal"
-    info = "Full Stack DevOps and Magician"
-    avatarurl = "images/avatar.jpg"
+    author = "Magdalena Bennett"
+    description = "Magdalena Bennett's personal website"
+    keywords = "research, personal"
+    info = "PhD student and #rstats enthusiast"
+    avatarurl = "images/mai.png"
     footercontent = "Enter a text here."
 
     dateformat = "January 2, 2006"
@@ -49,27 +49,22 @@ disqusShortname = "yourdiscussshortname"
     name = "Github"
     icon = "fab fa-github"
     weight = 1
-    url = "https://github.com/johndoe/"
+    url = "https://github.com/maibennett/"
 [[params.social]]
-    name = "Gitlab"
-    icon = "fab fa-gitlab"
+    name = "Spotify"
+    icon = "fab fa-spotify"
     weight = 2
-    url = "https://gitlab.com/johndoe/"
+    url = "https://open.spotify.com/user/11120745477?si=qLO1ptujQ2Wm78B8_NCMww"
 [[params.social]]
     name = "Twitter"
     icon = "fab fa-twitter"
     weight = 3
-    url = "https://twitter.com/johndoe/"
+    url = "https://twitter.com/maibennett/"
 [[params.social]]
     name = "LinkedIn"
     icon = "fab fa-linkedin"
     weight = 4
-    url = "https://www.linkedin.com/in/johndoe/"
-[[params.social]]
-    name = "Medium"
-    icon = "fab fa-medium"
-    weight = 5
-    url = "https://medium.com/@johndoe"
+    url = "https://www.linkedin.com/in/magdalena-bennett-9b18b816/"
 
 
 [languages]
@@ -82,48 +77,15 @@ disqusShortname = "yourdiscussshortname"
         url = "/about/"
 
         [[languages.en.menu.main]]
-        name = "Blog"
-        weight = 2
-        url = "/posts/"
-
-        [[languages.en.menu.main]]
-        name = "Projects"
+        name = "Research"
         weight = 3
-        url = "/projects/"
+        url = "/research/"
 
         [[languages.en.menu.main]]
         name = "Contact me"
         weight = 5
         url = "/contact/"
 
-
-    [languages.pt-br]
-        languagename = "Português"
-        title = "João Ninguém"
-
-        [languages.pt-br.params]
-            author = "João Ninguém"
-            info = "Full Stack DevOps e Mágico"
-            description = "Sítio pessoal de João Ninguém"
-            keywords = "blog,desenvolvedor,pessoal"
-            footercontent = "Coloque algum texto aqui."
-
-        [languages.pt-br.menu]
-
-            [[languages.pt-br.menu.main]]
-            name = "Sobre"
-            weight = 1
-            url = "/pt-br/about/"
-
-            [[languages.pt-br.menu.main]]
-            name = "Blog"
-            weight = 2
-            url = "/pt-br/posts/"
-
-            [[languages.pt-br.menu.main]]
-            name = "Projetos"
-            weight = 3
-            url = "/pt-br/projects/"
 
             [[languages.pt-br.menu.main]]
             name = "Contato"
