--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -21,7 +21,7 @@ disqusShortname = "yourdiscussshortname"
     keywords = "research, personal"
     info = "PhD student and #rstats enthusiast"
     avatarurl = "images/mai.png"
-    footercontent = "Enter a text here."
+    footercontent = ""
 
     dateformat = "January 2, 2006"
 
