--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -19,7 +19,7 @@ disqusShortname = "yourdiscussshortname"
     author = "Magdalena Bennett"
     description = "Magdalena Bennett's personal website"
     keywords = "research, personal"
-    info = "PhD student and #rstats enthusiast"
+    info = "PhD candidate and #rstats enthusiast"
     avatarurl = "images/mai.png"
     footercontent = ""
 
