--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -21,7 +21,7 @@ disqusShortname = "yourdiscussshortname"
     keywords = "research, personal"
     info = "PhD candidate and #rstats enthusiast"
     avatarurl = "images/mai.png"
-    footercontent = "<sup><sub>It's pronounced \"mag-da-leh:-nuh\"</sup></sub>"
+    footercontent = ""
 
     dateformat = "April 2, 2019"
 
