--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,6 +14,7 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 disqusShortname = "yourdiscussshortname"
+googleAnalytics = "UA-102578779-3"
 
 [params]
     author = "Magdalena Bennett"
