--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -13,7 +13,7 @@ pygmentsstyle = "b2"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-disqusShortname = "yourdiscussshortname"
+disqusShortname = "maibennett"
 googleAnalytics = "UA-102578779-3"
 enableEmoji = true
 
