--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -27,7 +27,7 @@ enableEmoji = true
 
     dateformat = "April 2, 2019"
 
-    hideCredits = false
+    hideCredits = true
     hideCopyright = false
 
     # Git Commit in Footer, uncomment the line below to enable it.
