--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -92,6 +92,11 @@ enableEmoji = true
         name = "Random Stuff"
         weight = 4
         url = "/random/"
+        
+        [[languages.en.menu.main]]
+        name = "#COVID-19 Stuff"
+        weight = 4
+        url = "/covid/"
 
         [[languages.en.menu.main]]
         name = "Contact me"
