--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,5 @@
-baseurl = "http://www.magdalenabennett.com"
+#baseurl = "http://www.magdalenabennett.com"
+baseurl = "http://maibennett.netlify.app/"
 title = "maibennett"
 
 theme = "hugo-coder"
