--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,5 +1,5 @@
 #baseurl = "http://www.magdalenabennett.com"
-baseurl = "http://maibennett.netlify.app/"
+baseurl = "https://maibennett.netlify.app/"
 title = "maibennett"
 
 theme = "hugo-coder"
