--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -84,16 +84,21 @@ enableEmoji = true
         url = "/research/"
         
         [[languages.en.menu.main]]
-        name = "Resources"
+        name = "Teaching"
         weight = 3
+        url = "/teaching/"
+
+        [[languages.en.menu.main]]
+        name = "Resources"
+        weight = 4
         url = "/resources/"
         
         [[languages.en.menu.main]]
         name = "Random Stuff"
-        weight = 4
+        weight = 5
         url = "/random/"
 
         [[languages.en.menu.main]]
         name = "Contact me"
-        weight = 5
+        weight = 6
         url = "/contact/"
