--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -28,7 +28,7 @@ enableEmoji = true
     # Google Analytics 4
     googleAnalyticsID = "G-NG7M9GM96S"
 
-    dateformat = "April 2, 2019"
+    dateformat = "2024-15-07"
 
     hideCredits = false
     hideCopyright = false
