--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -28,7 +28,7 @@ enableEmoji = true
     # Google Analytics 4
     googleAnalyticsID = "G-NG7M9GM96S"
 
-    dateformat = "2024-07-15"
+    dateformat = "02 Jan 2006"
 
     hideCredits = false
     hideCopyright = false
